# fazel_file_generator

./: MANIFEST.in  README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst
fazel_file_generator/: __init__.py  fazel_file_creator.py  obs_planning_revised.py  rasters.py
fazel_file_generator/data/: sources.ecsv
fazel_file_generator/tests/: test_fazel_file_creator.py  test_rasters.py
fazel_file_generator/tests/data/: fazel_crab_2015-06-01_chime.txt
licenses/: LICENSE.rst
