[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "fazel_file_generator"
description = "Algonquin Radio Observatory Fazel File creation code"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Rob Main, Fang Xi Lin, Daniel Baker, Jing Luo, Marten H. van Kerkwijk", email = "mhvk@astro.utoronto.ca" },
]
dependencies = []
dynamic = ["version"]
install_requires = [
    "astropy>=5.0",
    "matplotlib"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://eor.cita.utoronto.ca/penwiki/Fazel"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["fazel_file_generator._dev*"]

[tool.setuptools_scm]
write_to = "fazel_file_generator/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "fazel_file_generator",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "fazel_file_generator/__init*",
 "fazel_file_generator/conftest.py",
 "fazel_file_generator/*setup_package*",
 "fazel_file_generator/tests/*",
 "fazel_file_generator/*/tests/*",
 "fazel_file_generator/extern/*",
 "fazel_file_generator/version*",
 "*/fazel_file_generator/__init*",
 "*/fazel_file_generator/conftest.py",
 "*/fazel_file_generator/*setup_package*",
 "*/fazel_file_generator/tests/*",
 "*/fazel_file_generator/*/tests/*",
 "*/fazel_file_generator/extern/*",
 "*/fazel_file_generator/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
